feat: FeedServiceImpl에 Collectors를 사용 X, FeedController에서 toString() 사용